syntax="proto3";
//
message TraceNode {  
 string className=1;
 string methodName=2;
 int32 line=3;
 bool isThrow=4;
 string mark=5;
 int64 beginTimestamp=6;
 int64 endTimestamp=7;
 int32 count=8;
 int64 minCost=9;
 int64 maxCost=10;
 int64 totalCost=11;
repeated TraceNode children=12;
}
